CSS fixes for broken scrolling on mobile

--- a/src/client/app/styles/app.scss
+++ b/src/client/app/styles/app.scss
@@ -188,6 +188,10 @@ html, body {
   vertical-align: middle;
 }
 
+.header-column {
+  overflow: hidden;
+}
+
 .results-column-short {
   @include respond-to(small) { width: 25%; }
 }
